--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.1.6"
   },
@@ -38,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.11"
   }
 }
