--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "debounce": "^1.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/react-router-dom": "^5.3.3",
     "node-sass": "^7.0.1",
     "sass": "^1.49.11"
